--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ go:
 env:
   - "GO15VENDOREXPERIMENT=1"
 before_install:
-  - make deps
+  - make
 script:
   - make test
-  - make lint
-  - make
+  - make install
 after_success:
   - git config --global user.name "Deployer" && git config --global user.email foo@bar.com
   - go get github.com/tcnksm/ghr
