--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ go:
 env:
   - "GO15VENDOREXPERIMENT=1"
 before_install:
-  - make
+  - make deps
 script:
   - make test
-  - make install
+  - make lint
+  - make
 after_success:
   - git config --global user.name "Deployer" && git config --global user.email foo@bar.com
   - go get github.com/tcnksm/ghr
-  - ghr -u mudler -r devbot --replace --debug $TRAVIS_TAG release/
+  - ghr -u mudler -r docker-companion --replace --debug $TRAVIS_TAG release/
